==> aws/amazon-freertos/vendors/st/boards/stm32l475_discovery/ports/common_io/iot_i2c.c <==
#include "iot_config.h"
#include "stm32l4xx_hal.h"
#include "stm32l4xx_hal_i2c.h"
#include "stm32l475e_iot01.h"
#include "iot_i2c.h"
#include "semphr.h"
#define _FLAG_OPENED            ( 0x01 ) /* If the instance is already opened. */
#define _FLAG_SLAVE_ADDRESS     ( 0x02 ) /* If the slave address has been set. */
#define _FLAG_NO_STOP           ( 0x04 ) /* If the no stop has been requested. */
#define _FLAG_INITIALIZER       ( 0 )
#define _UNSET_SLAVE_ADDRESS    ( 0xFFFFU )
#define _I2C_READ_OP            ( 0 )
#define _I2C_WRITE_OP           ( 1 )
#define _I2C_SYNC_OP            ( 0 )
#define _I2C_ASYNC_OP           ( 1 )
#define _I2C_STATE_BUSY_MASK    ( 0x3 )
#define _toDescriptor( pHandle )                 ( ( IotI2CDescriptor_t * ) ( ( uint8_t * ) pHandle - offsetof( IotI2CDescriptor_t, xHandle ) ) )
#define _isFlagSet( pI2cDescriptor, flag )       ( ( ( pI2cDescriptor )->flags & ( flag ) ) > 0 )
#define _isFlagNotSet( pI2cDescriptor, flag )    ( ( ( pI2cDescriptor )->flags & ( flag ) ) == 0 )

IotI2CHandle_t iot_i2c_open( int32_t lI2CInstance )
{
    IotI2CDescriptor_t * pI2cDescriptor = NULL;
    HAL_StatusTypeDef halStatus = HAL_OK;

    if( ( lI2CInstance >= 0 ) && ( lI2CInstance < sizeof( _i2cContexts ) / sizeof( IotI2CDescriptor_t ) ) )
    {
        pI2cDescriptor = &_i2cContexts[ lI2CInstance ];
        I2C_HandleTypeDef * pHalHandle = &( pI2cDescriptor->xHandle );

        /* Not opened yet. */
        if( _isFlagNotSet( pI2cDescriptor, _FLAG_OPENED ) )
        {
            halStatus = HAL_I2C_Init( pHalHandle );

            if( halStatus == HAL_OK )
            {
                /* Configure Analog filter. */
                halStatus = HAL_I2CEx_ConfigAnalogFilter( pHalHandle, I2C_ANALOGFILTER_ENABLE );
            }

            if( halStatus == HAL_OK )
            {
                pI2cDescriptor->xSemphr = xSemaphoreCreateBinary();

                /* If semaphore creation fails, set returned handle to NULL. */
                if( pI2cDescriptor->xSemphr == NULL )
                {
                    pI2cDescriptor = NULL;
                }
            }
            else
            {
                /* In failure case, set returned handle to NULL. */
                pI2cDescriptor = NULL;
            }
        }
        else
        {
            /* Return NULL handle if opened more than once. */
            pI2cDescriptor = NULL;
        }

        if( pI2cDescriptor != NULL )
        {
            /* Set opened flag. */
            pI2cDescriptor->flags |= _FLAG_OPENED;
        }
    }

    return pI2cDescriptor;
}

int32_t iot_i2c_read_sync( IotI2CHandle_t const pxI2CPeripheral,
                           uint8_t * const pucBuffer,
                           size_t xBytes )
{
    int32_t status = IOT_I2C_SUCCESS;
    IotI2CDescriptor_t * pI2cDescriptor = pxI2CPeripheral;
    HAL_StatusTypeDef halStatus = HAL_OK;

    if( ( pI2cDescriptor == NULL ) ||
        ( _isFlagNotSet( pI2cDescriptor, _FLAG_OPENED ) ) ||
        ( pucBuffer == NULL ) ||
        ( xBytes == 0 ) )
    {
        status = IOT_I2C_INVALID_VALUE;
    }
    else if( _isFlagNotSet( pI2cDescriptor, _FLAG_SLAVE_ADDRESS ) )
    {
        status = IOT_I2C_SLAVE_ADDRESS_NOT_SET;
    }
    else
    {
        /* Initialize with the requested number of bytes. */
        pI2cDescriptor->usReceivedRxBytes = xBytes;

        halStatus = _doMasterTransfer( pI2cDescriptor, pucBuffer, xBytes, HAL_I2C_Master_Receive, NULL, HAL_I2C_Master_Sequential_Receive_IT );

        status = _toI2cStatus( halStatus, _I2C_READ_OP );
    }

    return status;
}

int32_t iot_i2c_write_sync( IotI2CHandle_t const pxI2CPeripheral,
                            uint8_t * const pucBuffer,
                            size_t xBytes )
{
    int32_t status = IOT_I2C_SUCCESS;
    IotI2CDescriptor_t * pI2cDescriptor = pxI2CPeripheral;
    HAL_StatusTypeDef halStatus = HAL_OK;

    if( ( pI2cDescriptor == NULL ) ||
        ( _isFlagNotSet( pI2cDescriptor, _FLAG_OPENED ) ) ||
        ( pucBuffer == NULL ) ||
        ( xBytes == 0 ) )
    {
        status = IOT_I2C_INVALID_VALUE;
    }
    else if( _isFlagNotSet( pI2cDescriptor, _FLAG_SLAVE_ADDRESS ) )
    {
        status = IOT_I2C_SLAVE_ADDRESS_NOT_SET;
    }
    else
    {
        /* Initialize with the requested number of bytes. */
        pI2cDescriptor->usTransmittedTxBytes = xBytes;

        halStatus = _doMasterTransfer( pI2cDescriptor, pucBuffer, xBytes, HAL_I2C_Master_Transmit, NULL, HAL_I2C_Master_Sequential_Transmit_IT );

        status = _toI2cStatus( halStatus, _I2C_WRITE_OP );
    }

    return status;
}

int32_t iot_i2c_read_async( IotI2CHandle_t const pxI2CPeripheral,
                            uint8_t * const pucBuffer,
                            size_t xBytes )
{
    int32_t status = IOT_I2C_SUCCESS;
    IotI2CDescriptor_t * pI2cDescriptor = pxI2CPeripheral;
    HAL_StatusTypeDef halStatus = HAL_OK;

    if( ( pI2cDescriptor == NULL ) ||
        ( _isFlagNotSet( pI2cDescriptor, _FLAG_OPENED ) ) ||
        ( pucBuffer == NULL ) ||
        ( xBytes == 0 ) )
    {
        status = IOT_I2C_INVALID_VALUE;
    }
    else if( _isFlagNotSet( pI2cDescriptor, _FLAG_SLAVE_ADDRESS ) )
    {
        status = IOT_I2C_SLAVE_ADDRESS_NOT_SET;
    }
    else
    {
        /* Initialize with the requested number of bytes. */
        pI2cDescriptor->usReceivedRxBytes = xBytes;

        halStatus = _doMasterTransfer( pI2cDescriptor, pucBuffer, xBytes, NULL, HAL_I2C_Master_Receive_IT, HAL_I2C_Master_Sequential_Receive_IT );

        status = _toI2cStatus( halStatus, _I2C_READ_OP );
    }

    return status;
}

int32_t iot_i2c_write_async( IotI2CHandle_t const pxI2CPeripheral,
                             uint8_t * const pucBuffer,
                             size_t xBytes )
{
    int32_t status = IOT_I2C_SUCCESS;
    IotI2CDescriptor_t * pI2cDescriptor = pxI2CPeripheral;
    HAL_StatusTypeDef halStatus = HAL_OK;

    if( ( pI2cDescriptor == NULL ) ||
        ( _isFlagNotSet( pI2cDescriptor, _FLAG_OPENED ) ) ||
        ( pucBuffer == NULL ) ||
        ( xBytes == 0 ) )
    {
        status = IOT_I2C_INVALID_VALUE;
    }
    else if( _isFlagNotSet( pI2cDescriptor, _FLAG_SLAVE_ADDRESS ) )
    {
        status = IOT_I2C_SLAVE_ADDRESS_NOT_SET;
    }
    else
    {
        /* Initialize with the requested number of bytes. */
        pI2cDescriptor->usTransmittedTxBytes = xBytes;

        halStatus = _doMasterTransfer( pI2cDescriptor, pucBuffer, xBytes, NULL, HAL_I2C_Master_Transmit_IT, HAL_I2C_Master_Sequential_Transmit_IT );

        status = _toI2cStatus( halStatus, _I2C_WRITE_OP );
    }

    return status;
}

int32_t iot_i2c_ioctl( IotI2CHandle_t const pxI2CPeripheral,
                       IotI2CIoctlRequest_t xI2CRequest,
                       void * const pvBuffer )
{
    int32_t status = IOT_I2C_SUCCESS;
    IotI2CDescriptor_t * pI2cDescriptor = pxI2CPeripheral;

    if( ( pI2cDescriptor == NULL ) ||
        ( _isFlagNotSet( pI2cDescriptor, _FLAG_OPENED ) ) )
    {
        status = IOT_I2C_INVALID_VALUE;
    }
    else
    {
        switch( xI2CRequest )
        {
            case eI2CSendNoStopFlag:

                pI2cDescriptor->flags |= _FLAG_NO_STOP;

                break;

            case eI2CSetSlaveAddr:

                if( pvBuffer == NULL )
                {
                    status = IOT_I2C_INVALID_VALUE;
                }
                else
                {
                    pI2cDescriptor->usSlaveAddr = *( uint16_t * ) pvBuffer;

                    /* Set slave address flag. */
                    pI2cDescriptor->flags |= _FLAG_SLAVE_ADDRESS;
                }

                break;

            case eI2CSetMasterConfig:

                if( pvBuffer == NULL )
                {
                    status = IOT_I2C_INVALID_VALUE;
                }
                /* TODO: here it assumes the state is busy if it is not ready, but other states might also be valid to set master config. */
                else if( pI2cDescriptor->xHandle.State != HAL_I2C_STATE_READY )
                {
                    status = IOT_I2C_BUSY;
                }
                else
                {
                    pI2cDescriptor->xConfig = *( IotI2CConfig_t * ) pvBuffer;
                }

                break;

            case eI2CGetMasterConfig:

                if( pvBuffer == NULL )
                {
                    status = IOT_I2C_INVALID_VALUE;
                }
                else
                {
                    *( IotI2CConfig_t * ) pvBuffer = pI2cDescriptor->xConfig;
                }

                break;

            case eI2CGetBusState:

                if( pvBuffer == NULL )
                {
                    status = IOT_I2C_INVALID_VALUE;
                }
                else
                {
                    *( IotI2CBusStatus_t * ) pvBuffer = pI2cDescriptor->xHandle.State == HAL_I2C_STATE_READY ? eI2CBusIdle : eI2cBusBusy;
                }

                break;

            /* TODO: have not tested */
            case eI2CBusReset:

                DISCOVERY_I2Cx_FORCE_RESET();

                DISCOVERY_I2Cx_RELEASE_RESET();

                break;

            case eI2CGetTxNoOfbytes:

                if( pvBuffer == NULL )
                {
                    status = IOT_I2C_INVALID_VALUE;
                }
                else
                {
                    *( uint16_t * ) pvBuffer = pxI2CPeripheral->usTransmittedTxBytes;
                }

                break;

            case eI2CGetRxNoOfbytes:

                if( pvBuffer == NULL )
                {
                    status = IOT_I2C_INVALID_VALUE;
                }
                else
                {
                    *( uint16_t * ) pvBuffer = pxI2CPeripheral->usReceivedRxBytes;
                }

                break;

            default:
                status = IOT_I2C_INVALID_VALUE;
        }
    }

    return status;
}
