==> aws/amazon-freertos/vendors/ti/boards/cc3220_launchpad/ports/common_io/iot_i2c.c <==
#include "iot_i2c.h"
#include <unistd.h>
#include "FreeRTOS.h"
#include "semphr.h"
#include <ti/drivers/I2C.h>
#include <ti/drivers/i2c/I2CCC32XX.h>
#define _FLAG_NO_STOP    ( 0x01 )        /* If the no stop has been requested. */
#define _OP_READ         ( 1 )
#define _OP_WRITE        ( 2 )
#define _MODE_SYNC       ( 1 )
#define _MODE_ASYNC      ( 2 )
#define _isFlagSet( pI2cDescriptor, flag )       ( ( ( pI2cDescriptor )->flags & ( flag ) ) > 0 )
#define _isFlagNotSet( pI2cDescriptor, flag )    ( ( ( pI2cDescriptor )->flags & ( flag ) ) == 0 )
#define _getState( pI2cDescriptor )                                                              \
    ( ( ( I2CCC32XX_Object * ) pxI2CPeripheral->handle->object )->mode == I2CCC32XX_IDLE_MODE || \
      ( ( I2CCC32XX_Object * ) pxI2CPeripheral->handle->object )->mode == I2CCC32XX_ERROR ? eI2CBusIdle : eI2cBusBusy )

IotI2CHandle_t iot_i2c_open( int32_t lI2CInstance )
{
    /* Only one instance id is allowed: 0 */
    if( lI2CInstance != 0 )
    {
        return NULL;
    }

    IotI2CHandle_t ret = NULL;
    I2C_Params params =
    {
        .transferCallbackFxn = _callbackInternal,
        .bitRate             = I2C_100kHz,
        .transferMode        = I2C_MODE_CALLBACK,
        .custom              = NULL
    };

    /* If this instance is not opened yet. */
    if( _i2cDescriptor.handle == NULL )
    {
        /* init is idempotent. */
        I2C_init();

        _i2cDescriptor.handle = I2C_open( lI2CInstance, &params );

        /* If open succeeds. */
        if( _i2cDescriptor.handle != NULL )
        {
            _i2cDescriptor.semphr = xSemaphoreCreateBinary();

            /* If semaphore creation succeeds. */
            if( _i2cDescriptor.semphr != NULL )
            {
                ret = &_i2cDescriptor;
            }
        }
    }

    return ret;
}

int32_t iot_i2c_read_sync( IotI2CHandle_t const pxI2CPeripheral,
                           uint8_t * const pvBuffer,
                           size_t xBytes )
{
    return _doTransfer( pxI2CPeripheral, pvBuffer, xBytes, _OP_READ, _MODE_SYNC );
}

int32_t iot_i2c_write_sync( IotI2CHandle_t const pxI2CPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    return _doTransfer( pxI2CPeripheral, pvBuffer, xBytes, _OP_WRITE, _MODE_SYNC );
}

int32_t iot_i2c_read_async( IotI2CHandle_t const pxI2CPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    return _doTransfer( pxI2CPeripheral, pvBuffer, xBytes, _OP_READ, _MODE_ASYNC );
}

int32_t iot_i2c_write_async( IotI2CHandle_t const pxI2CPeripheral,
                             uint8_t * const pvBuffer,
                             size_t xBytes )
{
    return _doTransfer( pxI2CPeripheral, pvBuffer, xBytes, _OP_WRITE, _MODE_ASYNC );
}

int32_t iot_i2c_ioctl( IotI2CHandle_t const pxI2CPeripheral,
                       IotI2CIoctlRequest_t xI2CRequest,
                       void * const pvBuffer )
{
    int32_t ret = IOT_I2C_SUCCESS;

    switch( xI2CRequest )
    {
        case eI2CSetMasterConfig:

            if( pvBuffer == NULL )
            {
                ret = IOT_I2C_INVALID_VALUE;
            }
            else if( _getState( pxI2CPeripheral ) == eI2cBusBusy )
            {
                ret = IOT_I2C_BUSY;
            }
            else
            {
                IotI2CConfig_t * pConfig = ( IotI2CConfig_t * ) pvBuffer;
                pxI2CPeripheral->config = *pConfig;
                /* Although I2CCC32XX.h says application should NOT access member of I2CCC32XX_Object, this is the only way found. */
                ( ( I2CCC32XX_Object * ) pxI2CPeripheral->handle->object )->bitRate = _frequencyToBitRate( pConfig->ulBusFreq );
            }

            break;

        case eI2CGetMasterConfig:

            if( pvBuffer == NULL )
            {
                ret = IOT_I2C_INVALID_VALUE;
            }
            else
            {
                IotI2CConfig_t * config = ( IotI2CConfig_t * ) pvBuffer;
                *config = pxI2CPeripheral->config;
            }

            break;

        case eI2CSetSlaveAddr:

            if( pvBuffer == NULL )
            {
                ret = IOT_I2C_INVALID_VALUE;
            }
            else
            {
                uint8_t * address = ( uint8_t * ) pvBuffer;
                pxI2CPeripheral->transaction.slaveAddress = ( uint_least8_t ) *address;
            }

            break;

        case eI2CSendNoStopFlag:
            pxI2CPeripheral->flags |= _FLAG_NO_STOP;
            break;

        case eI2CGetRxNoOfbytes:
            *( uint16_t * ) pvBuffer = pxI2CPeripheral->transaction.readCount;
            break;

        case eI2CGetTxNoOfbytes:
            *( uint16_t * ) pvBuffer = pxI2CPeripheral->transaction.writeCount;
            break;

        case eI2CGetBusState:
            *( IotI2CBusStatus_t * ) pvBuffer = _getState( pxI2CPeripheral );
            break;

        default:
            ret = IOT_I2C_INVALID_VALUE;
            break;
    }

    return ret;
}
